# gems

./: .gitignore  AGENTS.md  gym_env.py  main.py  pyproject.toml  single_player_search.py
agents/: agent.py
gems/: __init__.py  action.py  actions.py  consts.py  engine.py  gym_env.py  models.py  state.py  typings.py  utils.py
gems/agents/: core.py  greedy.py  random.py  space_sample.py  target.py
gems/assets/: config.json  config.yaml
gems/gym/: __init__.py  _common.py  action_space.py  env.py  sampling.py  state_space.py
scripts/: _common.py  consts.py  exec.py  run_simulations.py  simulation.py  simulation_config.toml.example  simulation_utils.py  test.py
scripts/simulation/: __init__.py  config.py  core.py  extractors.py  plot.py  utils.py
tests/: test_action_apply_methods.py  test_actions.py  test_advance_turn.py  test_agent_builder.py  test_agents.py  test_assets.py  test_can_afford_discounts.py  test_cardlist.py  test_engine.py  test_gym_env.py  test_gym_space.py  test_legal_actions.py  test_replay.py  test_sampling.py  test_shuffle_and_draw.py  test_typings.py
