[project]
name = "gems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "gymnasium>=1.2.1",
  "matplotlib>=3.10.7",
  "pydantic>=2.12.3",
  "PyYAML>=6.0.3",
  "stable-baselines3>=2.7.0",
  "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ipykernel>=7.0.0",
]
